--- a/index.html
+++ b/index.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
+<title>Impossible Wings</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>One Tap Life</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>🐤 One Tap Life</h1>
+<nav>
+<a href="index.html">Home</a>
+<a href="about.html">About</a>
+<a href="contact.html">Contact</a>
+<a href="privacy.html">Privacy</a>
+<a href="tips.html">Tips</a>
+</nav>
+
+<div class="container">
+<h1>🐤 Impossible Wings</h1>
+
 <canvas id="gameCanvas"></canvas>
 <button id="restartBtn">Restart</button>
+
+</div>
+
+<footer>
+© 2026 Impossible Wings | All Rights Reserved
+</footer>
 
 <script src="script.js"></script>
 </body>
