--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Impossible Wings</title>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Impossible Wings - Play Online</title>
+
+<meta name="description" content="Play Impossible Wings online for free. A fun and challenging flying bird game with levels, sound effects and high score system.">
+
+<!-- Google AdSense Verification Code -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1468595385901398"
+     crossorigin="anonymous"></script>
+
 <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <nav>
@@ -17,16 +26,24 @@
 
 <div class="container">
 <h1>🐤 Impossible Wings</h1>
+<p>Tap or Press Space to Fly!</p>
 
-<canvas id="gameCanvas"></canvas>
-<button id="restartBtn">Restart</button>
+<canvas id="gameCanvas" width="400" height="600"></canvas>
 
+<div class="scoreboard">
+<p>Score: <span id="score">0</span></p>
+<p>High Score: <span id="highScore">0</span></p>
+<p>Level: <span id="level">1</span></p>
+</div>
+
+<button onclick="startGame()">Start Game</button>
 </div>
 
 <footer>
-© 2026 Impossible Wings | All Rights Reserved
+<p>© 2026 Impossible Wings | Created by <strong><i>aamin</i></strong></p>
 </footer>
 
 <script src="script.js"></script>
+
 </body>
 </html>
